--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Tailwind CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>React App</title>
+    <title>WanderWave</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
